--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Home"/>
-	<classpathentry kind="lib" path="/usr/local/spark-1.4.1-bin-hadoop2.6/lib/datanucleus-api-jdo-3.2.6.jar"/>
-	<classpathentry kind="lib" path="/usr/local/spark-1.4.1-bin-hadoop2.6/lib/datanucleus-core-3.2.10.jar"/>
-	<classpathentry kind="lib" path="/usr/local/spark-1.4.1-bin-hadoop2.6/lib/datanucleus-rdbms-3.2.9.jar"/>
-	<classpathentry kind="lib" path="/usr/local/spark-1.4.1-bin-hadoop2.6/lib/spark-1.4.1-yarn-shuffle.jar"/>
-	<classpathentry kind="lib" path="/usr/local/spark-1.4.1-bin-hadoop2.6/lib/spark-assembly-1.4.1-hadoop2.6.0.jar"/>
-	<classpathentry kind="lib" path="/usr/local/spark-1.4.1-bin-hadoop2.6/lib/spark-examples-1.4.1-hadoop2.6.0.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/usr/local/spark/spark-riak-connector-1.6.0/connector/target/scala-2.10/spark-riak-connector_2.10-1.6.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/spark/spark-riak-connector-1.6.0/connector/target/scala-2.10/spark-riak-connector_2.10-1.6.0-uber.jar"/>
+	<classpathentry kind="lib" path="/usr/local/spark/spark-riak-connector-1.6.0/riak-client-2.0.2.jar"/>
+	<classpathentry kind="lib" path="/usr/local/spark/spark-riak-connector-1.6.0/connector/target/scala-2.10/classes/com/basho/riak/spark/rdd"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
