--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
            <version>1.6.0</version>
            <classifier>uber</classifier>
          </dependency>
+         <dependency>
+           <groupId>com.basho.riak</groupId>
+           <artifactId>riak-client</artifactId>
+           <version>2.0.7</version>
+         </dependency>
         
     </dependencies>
        <repository>
